<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.sign_up.SignUpActivity">

    <EditText
        android:id="@+id/mTxtBusinessName"
        style="@style/generalEditTextValue"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/supplier_business_name"
        android:imeOptions="actionNext"
        android:inputType="textCapWords"
        android:paddingStart="@dimen/gap_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mImgLogo" />

    <EditText
        android:id="@+id/mTxtOwnerName"
        style="@style/generalEditTextValue"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/gap_32"
        android:layout_marginTop="@dimen/gap_16"
        android:layout_marginEnd="@dimen/gap_32"
        android:hint="@string/owner_name"
        android:imeOptions="actionNext"
        android:inputType="textCapWords"
        android:paddingStart="@dimen/gap_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mTxtBusinessName" />

    <EditText
        android:id="@+id/mTxtAddress"
        style="@style/generalEditTextValue"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/gap_32"
        android:layout_marginTop="@dimen/gap_16"
        android:layout_marginEnd="@dimen/gap_32"
        android:hint="@string/address"
        android:imeOptions="actionNext"
        android:inputType="textCapWords"
        android:paddingStart="@dimen/gap_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mTxtOwnerName" />

    <EditText
        android:id="@+id/mTxtContactNumber"
        style="@style/generalEditTextValue"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/telephone_number"
        android:imeOptions="actionNext"
        android:inputType="numberDecimal"
        android:paddingStart="@dimen/gap_24"
        app:layout_constraintEnd_toStartOf="@+id/mTxtNICBusiness"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mTxtAddress" />

    <EditText
        android:id="@+id/mTxtNICBusiness"
        style="@style/generalEditTextValue"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/nic_biz_reg"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:paddingStart="@dimen/gap_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mTxtContactNumber"
        app:layout_constraintTop_toBottomOf="@+id/mTxtAddress" />

    <EditText
        android:id="@+id/mTxtPassword"
        style="@style/generalEditTextValue"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:paddingStart="@dimen/gap_24"
        app:layout_constraintEnd_toStartOf="@+id/mTxtConfirmPassword"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mTxtContactNumber" />

    <EditText
        android:id="@+id/mTxtConfirmPassword"
        style="@style/generalEditTextValue"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/confirm_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingStart="@dimen/gap_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mTxtPassword"
        app:layout_constraintTop_toBottomOf="@+id/mTxtNICBusiness" />

    <Button
        android:id="@+id/mBtnSignUp"
        style="@style/generalButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mTxtConfirmPassword" />

    <ImageView
        android:id="@+id/mImgLogo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_store_mall" />

    <ProgressBar
        android:id="@+id/mRegisterProgress"
        style="?android:attr/progressBarStyle"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>
